WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
128114
AX: WebKit should support @headers/@id for complex accessible web tables
https://bugs.webkit.org/show_bug.cgi?id=128114
Summary
AX: WebKit should support @headers/@id for complex accessible web tables
chris fleizach
Reported
2014-02-03 11:11:09 PST
AX: WebKit should support @headers/@id for complex accessible web tables * STEPS TO REPRODUCE 1. Using VO, navigate the tables on
http://webaim.org/articles/voiceover/tables
* RESULTS headers/id attributes are ignored. This radar represents the WebKit portion of the bug. <
rdar://problem/9199163
>
Attachments
patch
(5.82 KB, patch)
2014-02-03 11:13 PST
,
chris fleizach
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
chris fleizach
Comment 1
2014-02-03 11:13:42 PST
Created
attachment 223001
[details]
patch
Darin Adler
Comment 2
2014-02-03 11:51:18 PST
Comment on
attachment 223001
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=223001&action=review
> Source/WebCore/accessibility/AccessibilityTableCell.cpp:158 > + AccessibilityObject* object = cache->getOrCreate(element); > + if (object) > + headers.append(object);
I suggest putting this inside the if statement. if (AccessibilityObject* object = cache->getOrCreate(element)) headers.append(object);
> Source/WebCore/accessibility/AccessibilityTableCell.cpp:162 > + if (headers.size())
Maybe !headers.isEmpty() would be better?
chris fleizach
Comment 3
2014-02-03 11:52:43 PST
(In reply to
comment #2
)
> (From update of
attachment 223001
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=223001&action=review
> > > Source/WebCore/accessibility/AccessibilityTableCell.cpp:158 > > + AccessibilityObject* object = cache->getOrCreate(element); > > + if (object) > > + headers.append(object); > > I suggest putting this inside the if statement. > > if (AccessibilityObject* object = cache->getOrCreate(element)) > headers.append(object); > > > Source/WebCore/accessibility/AccessibilityTableCell.cpp:162 > > + if (headers.size()) > > Maybe !headers.isEmpty() would be better?
Done. Thanks!
chris fleizach
Comment 4
2014-02-03 12:30:04 PST
http://trac.webkit.org/changeset/163320
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug