AX: WebKit should support @headers/@id for complex accessible web tables https://bugs.webkit.org/show_bug.cgi?id=128114

Reviewed by Darin Adler.

Source/WebCore:

Expose the headers attribute for table cells to accessibility.

Test: platform/mac/accessibility/table-headers-attribute.html

* accessibility/AccessibilityTableCell.cpp:
(WebCore::AccessibilityTableCell::columnHeaders):

LayoutTests:

* platform/mac/accessibility/table-headers-attribute-expected.txt: Added.
* platform/mac/accessibility/table-headers-attribute.html: Added.



Canonical link: https://commits.webkit.org/146131@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@163320 268f45cc-cd09-0410-ab3c-d52691b4dbfc